[package]
name = "blis-sys"
version = "0.2.0"
edition = "2021"
authors = ["sarah <>"]
description = "Rust bindings for BLIS"
readme = "README.md"
repository = "https://github.com/kitegi/blis-sys/"
license = "MIT"
keywords = ["linear-algebra"]
exclude = [
    "upstream/docs/",
    "upstream/examples/",
    "upstream/mpi_test/",
    "upstream/**/test/",
]

[dependencies]
openmp-sys = { version = "1.2", optional = true }

[features]
default = ["openmp", "static"]

pthreads = []
openmp = ["openmp-sys"]
serial = []
static = []

[build-dependencies]
bindgen = "0.59.2"
